@@ -18,12 +18,13 @@ public class ServiceBuilderTest
   }
 
   @Test
-  public void shouldReturnOOBasDefaultCallback()
+  public void shouldReturnConfigDefaultValues()
   {
     builder.provider(ApiMock.class).apiKey("key").apiSecret("secret").build();
     assertEquals(ApiMock.config.getApiKey(), "key");
     assertEquals(ApiMock.config.getApiSecret(), "secret");
     assertEquals(ApiMock.config.getCallback(), OAuthConstants.OUT_OF_BAND);
+    assertEquals(ApiMock.config.getSignatureType(), SignatureType.Header);
   }
 
   @Test
@@ -33,6 +34,15 @@ public class ServiceBuilderTest
     assertEquals(ApiMock.config.getApiKey(), "key");
     assertEquals(ApiMock.config.getApiSecret(), "secret");
     assertEquals(ApiMock.config.getCallback(), "http://example.com");
+  }
+
+  @Test
+  public void shouldAcceptASignatureType()
+  {
+    builder.provider(ApiMock.class).apiKey("key").apiSecret("secret").signatureType(SignatureType.QueryString).build();
+    assertEquals(ApiMock.config.getApiKey(), "key");
+    assertEquals(ApiMock.config.getApiSecret(), "secret");
+    assertEquals(ApiMock.config.getSignatureType(), SignatureType.QueryString);
   }
 
   @Test(expected=IllegalArgumentException.class)
